--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+!DOCTYPE HTML
+<head>
+<body>
+My hobbies
+</body>
+<script>
+Console.log("Bobux simulators")
+</script>
+<h1>
+Bobux simulators
+</head>
