--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 !DOCTYPE HTML
 <head>
 <body>
-My hobbies
+My (Jordan) hobbies
 </body>
 <script>
-Console.log("Bobux simulators")
+var B = "bobux";
+Console.log("B + simulators");
 </script>
 <h1>
 Bobux simulators
