--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ My (Jordan) hobbies
 </body>
 <script>
 var B = "bobux";
-Console.log($"{B} + simulators");
+Console.log("${B} + simulators");
 </script>
 <h1>
 Bobux simulators
